--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ header > div > span {
   color: var(--header-text)
 }
 
+header > div > i {
+  color: white;
+  margin-left: 1rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+
+
 #sizeInput{
   background-color: var(--accent);
   color: var(--header-text);
@@ -66,6 +75,12 @@ header > div > span {
   box-shadow: 0 0 2rem var(--accent);
 }
 
+header > div > i:hover{
+  scale: 1.1;
+  box-shadow: 0 0 2rem var(--accent);
+  color: var(--accent);
+}
+
 h1{
   font-size: 2rem;
 }
@@ -77,7 +92,7 @@ h1{
 }
 
 .cell {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   border: 1px solid #999;
   margin: 0;
 }
