--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header > div > span {
 header > div > i {
   color: white;
   margin-left: 1rem;
+  margin-right: 1rem;
   font-size: 1.2rem;
   cursor: pointer;
 }
